--- a/app/assets/stylesheets/scaffolds.css.scss
+++ b/app/assets/stylesheets/scaffolds.css.scss
@@ -41,17 +41,25 @@ div {
 
 .field_with_errors {
   padding: 2px;
-  background-color: red;
   display: table;
 }
 
+.field_with_errors input[type=text], .field_with_errors textarea {
+  background-color: #f2dede;
+  width: 867px;
+}
+.alert-error {
+
+}
 #error_explanation {
+
+  color: #b94a48;
+  background-color: #f2dede;
+  border-color: #eed3d7;
   width: 450px;
-  border: 2px solid red;
   padding: 7px;
   padding-bottom: 0;
   margin-bottom: 20px;
-  background-color: #f0f0f0;
   h2 {
     text-align: left;
     font-weight: bold;
@@ -59,11 +67,14 @@ div {
     font-size: 12px;
     margin: -7px;
     margin-bottom: 0px;
-    background-color: #c00;
+    background-color: #f4aeae;
     color: #fff;
   }
   ul li {
     font-size: 12px;
     list-style: square;
+  }
+  #respond div.field_with_errors input[type="text"] {
+    width: 867px;
   }
 }
