--- a/app/assets/stylesheets/feedbacks.css.scss
+++ b/app/assets/stylesheets/feedbacks.css.scss
@@ -5,7 +5,7 @@
 .alert {
   text-align: center;
   padding: 8px 35px 8px 14px;
-  margin: 10px 10px 20px 10px;
+  margin: 10px 0 20px 0;
   text-shadow: 0 1px 0 rgba(255, 255, 255, 0.5);
   background-color: #fcf8e3;
   border: 1px solid #fbeed5;
@@ -40,5 +40,155 @@
   border-color: #eed3d7;
   h4 {
     color: #b94a48;
+  }
+}
+
+.root {
+  margin: 0 auto;
+  width: 960px;
+  h2 {
+    font-size: 24px;
+
+  }
+  div.description {
+    margin: 25px 5px;
+  }
+}
+
+.topbar {
+  width: 960px;
+  height: 90px;
+}
+
+.left {
+  width: 70px;
+  height: 86px;
+  float: left;
+}
+
+.right {
+  width: 960px;
+  height: 86px;
+}
+
+/*button send*/
+
+a {
+  text-decoration: none;
+  color: #333333;
+}
+
+.container {
+  width: 135px;
+  margin: 0px auto 11px; /* buttons pushed from the top by 10% */
+}
+
+.button {
+  margin: 8px;
+}
+
+#respond {
+  p {
+    clear: both;
+    line-height: 40px;
+    margin: 5px 0;
+    input[type="text"] {
+      width: 875px;
+      float: left;
+    }
+  }
+  label {
+    float: left;
+    width: 65px;
+    padding-right: 10px;
+
+    text-shadow: 1px 1px 1px #fff;
+    text-align: right;
+  }
+  div.field_with_errors {
+    input[type="text"] {
+      width: 872px;
+    }
+  }
+}
+
+.comment-form-email {
+  float: left;
+}
+
+/*input*/
+input, textarea {
+  border: 1px solid #afafaf;
+  background: #fff;
+  color: #333;
+  padding: 8px 7px;
+}
+textarea {
+  font-family: inherit;
+  width: 500px;
+}
+
+input:hover, textarea:hover {
+  border: 1px solid #8b8b8b;
+  -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,0.15);
+  -moz-box-shadow: inset 0 1px 1px rgba(0,0,0,0.15);
+  box-shadow: inset 0 1px 1px rgba(0,0,0,0.15);
+}
+
+input:focus, textarea:focus {
+  outline: none;
+  border: 1px solid #24a3cd;
+  -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,0.15);
+  -moz-box-shadow: inset 0 1px 1px rgba(0,0,0,0.15);
+  box-shadow: inset 0 1px 1px rgba(0,0,0,0.15);
+}
+
+
+div.content {
+  margin-top: 20px;
+}
+
+.button-submit {
+  margin-top: 20px;
+}
+
+.button-submit input[type="submit"] {
+  border-top: 1px solid #827FB0;
+  background: #323F8D;
+  background: -webkit-gradient(linear, left top, left bottom, from(#827FB0), to(#323F8D));
+  background: -webkit-linear-gradient(top, #827FB0, #323F8D);
+  background: -moz-linear-gradient(top, #827FB0, #323F8D);
+  background: -ms-linear-gradient(top, #827FB0, #323F8D);
+  background: -o-linear-gradient(top, #827FB0, #323F8D);
+  padding: 10px 20px;
+  -webkit-border-radius: 6px;
+  -moz-border-radius: 6px;
+  border-radius: 6px;
+
+  text-shadow: rgba(0, 0, 0, .4) 0 1px 0;
+  color: #ffffff;
+  font-size: 16px;
+  font-family: Helvetica, Arial, Sans-Serif;
+  text-decoration: none;
+  vertical-align: middle;
+}
+
+.button-submit input[type="submit"]:hover {
+  border-top-color: #5769F0;
+  background: #4654BF;
+}
+
+.button-submit input[type="submit"]:active {
+  border-top-color: #221F5F;
+  background: #221F5F;
+}
+
+#header {
+  margin: 9px auto;
+  width: 960px;
+  div.separate {
+    height: 1px;
+    background-color: darkslategrey;
+    margin-top: 10px
   }
 }
